[gd_scene load_steps=27 format=3 uid="uid://broaos8akuc5f"]

[ext_resource type="PhysicsMaterial" uid="uid://deru0wsiqkst8" path="res://Physics/Physics_Player.tres" id="1_b2t31"]
[ext_resource type="Script" path="res://Creatives/_scripts/health.gd" id="2_6a5ro"]
[ext_resource type="Script" path="res://Creatives/_scripts/NPC_Roamer.gd" id="2_ocby1"]
[ext_resource type="PackedScene" uid="uid://ckqk5fedx0m3q" path="res://Explosive/Explosions/Explosion_A/Explosion_A.tscn" id="4_7h6s0"]
[ext_resource type="ArrayMesh" uid="uid://cjqvq2awiksjj" path="res://Crafts/Paladin/Geometry/Turret.obj" id="4_dcwka"]
[ext_resource type="AudioStream" uid="uid://dksny4b258a2b" path="res://Sounds/Weapons/Explosion.wav" id="5_0ns04"]
[ext_resource type="Material" uid="uid://clj5jh6v7iyl0" path="res://Materials/glitz_gray.material" id="6_hapyq"]
[ext_resource type="Material" uid="uid://bb5au6shernuv" path="res://Materials/gun_metal.material" id="6_yn72c"]
[ext_resource type="ArrayMesh" uid="uid://oighycb1gyxn" path="res://Crafts/Paladin/Geometry/Barrel.obj" id="7_t6iaa"]
[ext_resource type="Script" path="res://Creatives/_scripts/NPC_Shoot.gd" id="8_ybhwq"]
[ext_resource type="Resource" uid="uid://dssl60dw2733b" path="res://Weapons/Projectile_Settings_NPC/Albatross.tres" id="9_ymg7y"]
[ext_resource type="Resource" uid="uid://covsmla6kt3jp" path="res://Weapons/Projectile_Settings_NPC/Detno.tres" id="10_hu667"]
[ext_resource type="Resource" uid="uid://dq37lxr0dcjon" path="res://Weapons/Projectile_Settings_NPC/Disruptor.tres" id="11_6q72c"]
[ext_resource type="ArrayMesh" uid="uid://rdgp20h81cgg" path="res://Crafts/Paladin/Geometry/Bezels.obj" id="12_qlh1i"]
[ext_resource type="ArrayMesh" uid="uid://bqfb5qxhfsu81" path="res://Crafts/Paladin/Geometry/Hover Pads.obj" id="14_f1aoy"]
[ext_resource type="ArrayMesh" uid="uid://dlj55k56gf1dg" path="res://Crafts/Paladin/Geometry/Hull.obj" id="15_lqf4c"]
[ext_resource type="Material" uid="uid://nww7en7lvg17" path="res://Materials/water.material" id="16_1uui0"]
[ext_resource type="ArrayMesh" uid="uid://cur1dt5mu1fcg" path="res://Crafts/Paladin/Geometry/Lens.obj" id="16_knnuy"]
[ext_resource type="Material" uid="uid://pfaidv5deiuc" path="res://Materials/Rubber.material" id="17_hgadc"]
[ext_resource type="Material" uid="uid://dwxlgxsvxgbrm" path="res://Materials/glass.material" id="17_sv8s6"]
[ext_resource type="ArrayMesh" uid="uid://bc0th4psgbu6u" path="res://Crafts/Paladin/Geometry/Rocker.obj" id="18_siu6o"]
[ext_resource type="ArrayMesh" uid="uid://dxoygchqwuuq7" path="res://Crafts/Paladin/Geometry/Sills.obj" id="19_w0bvq"]
[ext_resource type="ArrayMesh" uid="uid://blmd82yoxs6oa" path="res://Crafts/Paladin/Geometry/Stripe.obj" id="20_1tk84"]
[ext_resource type="ArrayMesh" uid="uid://dm6pa62ys4f7h" path="res://Crafts/Paladin/Geometry/Underbody.obj" id="21_je7su"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_1yqvq"]
points = PackedVector3Array(0.36, -0.234853, 1.21184, 0.349992, -0.178604, 1.15553, 0.0123336, 0.0257322, 1.14286, 0.344002, -0.25771, 1.23483, 0.36, -0.234853, -0.363079, 0.343156, -0.166282, 1.14333, 0.349992, -0.178604, -0.336958, 0.00634298, 0.0278542, 1.14286, 0.161746, 0.0572631, 0.181394, 0.15054, 0.0881983, -0.0917027, -7.04825e-05, 0.0285615, 1.14286, -0.344072, -0.25771, 1.23483, 0.13137, -0.272527, 1.20918, 0.319969, -0.291996, 1.1754, 0.319969, -0.291996, -0.305988, -0.36, -0.234853, -0.363079, 0.285787, -0.0634252, -0.199628, 0.285717, -0.0634252, 0.493751, -0.350063, -0.178604, -0.336958, 0.18148, -2.8491e-05, -0.234351, 0.181903, 0.000864953, -0.232944, 0.186625, 0.0518653, -0.0890436, 0.150047, 0.08831, -0.0926411, -0.00641349, 0.0278542, 1.14286, -0.150117, 0.08831, -0.0926411, -0.150611, 0.0881983, -0.0917027, -0.32011, -0.291996, 1.1754, -0.131441, -0.272527, 1.20918, -0.0124041, 0.0257322, 1.14286, -0.36, -0.234853, 1.21184, -0.352036, -0.246282, 0.137442, -0.32011, -0.291996, -0.305988, -0.285787, -0.0634252, -0.199628, -0.181973, 0.000864953, -0.232944, -0.181551, -2.8491e-05, -0.234351, -0.350063, -0.178604, 1.15553, -0.343226, -0.166282, 1.14333, -0.161817, 0.0572631, 0.181394, -0.186695, 0.0518653, -0.0890436, -0.285787, -0.0634252, 0.493751)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_c4dnr"]

[node name="Paladin" type="RigidBody3D" node_paths=PackedStringArray("left_raycast", "right_raycast", "ground_raycast") groups=["Creative", "NPC"]]
collision_layer = 8
collision_mask = 4294967039
mass = 5.0
physics_material_override = ExtResource("1_b2t31")
center_of_mass_mode = 1
center_of_mass = Vector3(0, -0.25, -0.25)
continuous_cd = true
contact_monitor = true
max_contacts_reported = 15
script = ExtResource("2_ocby1")
force = 40.0
turn_rate = 30.0
left_raycast = NodePath("left_raycast")
right_raycast = NodePath("right_raycast")
ground_raycast = NodePath("ground_raycast")

[node name="Health" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.999794, -0.0202793, 0, 0.0202793, 0.999794, 0, 0, 0)
script = ExtResource("2_6a5ro")
explosion = ExtResource("4_7h6s0")
explosionSound = ExtResource("5_0ns04")
life = 30.0
armor = 30.0
shield = 30.0
VCredit = 1

[node name="left_raycast" type="RayCast3D" parent="."]
transform = Transform3D(0.984808, 0, -0.173648, 0, 1, 0, 0.173648, 0, 0.984807, 0.35, -0.178772, -1.25388)
target_position = Vector3(0, 0, -5)
collision_mask = 255

[node name="right_raycast" type="RayCast3D" parent="."]
transform = Transform3D(0.984808, 0, 0.173648, 0, 1, 0, -0.173648, 0, 0.984807, -0.35, -0.178772, -1.25388)
target_position = Vector3(0, 0, -5)
collision_mask = 255

[node name="ground_raycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.238199, -0.466731)
target_position = Vector3(0, -0.6, 0)
collision_mask = 2

[node name="Turret" type="MeshInstance3D" parent="." node_paths=PackedStringArray("turret", "barrel")]
layers = 8
material_override = ExtResource("6_hapyq")
mesh = ExtResource("4_dcwka")
script = ExtResource("8_ybhwq")
turret = NodePath(".")
barrel = NodePath("Barrel")
weapon_settings = Array[Resource]([ExtResource("9_ymg7y"), ExtResource("10_hu667"), ExtResource("11_6q72c")])

[node name="Barrel" type="MeshInstance3D" parent="Turret"]
layers = 8
material_override = ExtResource("6_yn72c")
mesh = ExtResource("7_t6iaa")
skeleton = NodePath("../..")

[node name="ShootCast" type="RayCast3D" parent="Turret/Barrel"]
target_position = Vector3(0, 0, -15)
hit_from_inside = true

[node name="Body" type="Node3D" parent="."]

[node name="Bezels" type="MeshInstance3D" parent="Body"]
layers = 8
mesh = ExtResource("12_qlh1i")

[node name="Hoverpads" type="MeshInstance3D" parent="Body"]
layers = 8
material_override = ExtResource("16_1uui0")
mesh = ExtResource("14_f1aoy")

[node name="Hull" type="MeshInstance3D" parent="Body"]
layers = 8
material_override = ExtResource("6_hapyq")
mesh = ExtResource("15_lqf4c")

[node name="Lenses" type="MeshInstance3D" parent="Body"]
layers = 8
mesh = ExtResource("16_knnuy")

[node name="Rocker" type="MeshInstance3D" parent="Body"]
layers = 8
material_override = ExtResource("17_hgadc")
mesh = ExtResource("18_siu6o")

[node name="Sills" type="MeshInstance3D" parent="Body"]
layers = 8
mesh = ExtResource("19_w0bvq")

[node name="Stripe" type="MeshInstance3D" parent="Body"]
layers = 8
material_override = ExtResource("6_yn72c")
mesh = ExtResource("20_1tk84")

[node name="Underbody" type="MeshInstance3D" parent="Body"]
layers = 8
material_override = ExtResource("17_hgadc")
mesh = ExtResource("21_je7su")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
shape = SubResource("ConvexPolygonShape3D_1yqvq")

[node name="Shields" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 0.5, 0, -1, -2.18557e-08, 0, -0.138122, -0.42662)
visible = false
layers = 495
material_override = ExtResource("17_sv8s6")
mesh = SubResource("CapsuleMesh_c4dnr")
